# ReStar

./: .gitignore  .gitmodules  CMakeLists.txt  HARDWARE.md  README.md
dev-resources/: installer.nsi
resources/: driver.vrdrivermanifest
resources/gc/: StarVR_v0.gc
resources/input/: legacy_binding_starvr_one.json  starvr_one_profile.json
resources/localization/: localization_en_US.json
resources/resources/localization/: localization.json  localization_en_US.json
resources/resources/settings/: default.vrsettings  settingsschema.vrsettings
resources/settings/: default.vrsettings  settingsschema.vrsettings
src/: Main.cpp  StarPatcher.cpp  StarPatcher.hpp  TrackedDeviceProvider.cpp  TrackedDeviceProvider.hpp  vrmath.hpp
src/interfaces/: IVRDisplayComponent.hpp  IVRDriverDirectModeComponent.hpp
